# rav1d-safe

./: .gitignore  ARC_RC_CARC_EXPLAINED.md  BUG_PLANEVIEW_HEIGHT_MISMATCH.md  CAPI.md  CLAUDE.md  CLEAN_ARCHITECTURE.md  CONTEXT-HANDOFF.md  Cargo.toml  DISJOINT_MUT_ANALYSIS.md  FEEDBACK.md  FIXED.md  HANDOFF-SAFE-INTRINSICS.md  PLAN-ZERO-UNSAFE.md  README.md  REAL_UNSAFE_ANALYSIS.md  SAFETY_ARCHITECTURE_SUMMARY.md  SPEC.md  STRATEGY.md  TEST-VECTORS-README.md  THREADING_BUGS.md  THREAD_FIX_COMPLETE.md  THREAD_FIX_HANDOFF.md  UNSAFE_AUDIT.md  UNSAFE_CODE_ANALYSIS.md  build.rs  justfile  lib.rs  managed_minimal_api.md  rust-toolchain.toml
.github/workflows/: ci.yml  disjoint-mut-ci.yml  test-vectors.yml
benches/: decode.rs  decode_avif.rs  tango_decode.rs
crates/disjoint-mut/: AUDIT.md  Cargo.toml  justfile
crates/disjoint-mut/src/: lib.rs
crates/disjoint-mut/tests/: soundness.rs
crates/rav1d-disjoint-mut/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/rav1d-disjoint-mut/src/: align.rs  lib.rs
crates/rav1d-disjoint-mut/tests/: aligned_miri.rs  soundness.rs
examples/: annexb_parser.rs  decode_md5.rs  demo_simple.rs  dump_pixels.rs  ivf_parser.rs  managed_decode.rs  perframe_md5.rs  profile_avif.rs  profile_decode.rs  profile_ivf.rs
fuzz/fuzz_targets/: decode_obu.rs  parse_seq_header.rs
include/common/: attributes.rs  bitdepth.rs  dump.rs  intops.rs  validate.rs
include/dav1d/: common.rs  data.rs  dav1d.rs  headers.rs  picture.rs
scripts/: add_flex_shadows.py  conformance_test.sh  download-all-test-vectors.sh  download-test-vectors.sh  extract_test_vectors.py  run_dav1d_tests.py  run_md5_parity.py  test-all-vectors.sh
src/: align.rs  assume.rs  c_arc.rs  c_box.rs  cdef.rs  cdef_apply.rs  cdf.rs  const_fn.rs  cpu.rs  ctx.rs  cursor.rs  data.rs  dav1d_api.rs  decode.rs  decode_test.rs  dequant_tables.rs  disjoint_mut.rs  enum_map.rs  env.rs  error.rs  extensions.rs  ffi_safe.rs  fg_apply.rs  filmgrain.rs  getbits.rs  in_range.rs  internal.rs  intra_edge.rs  ipred.rs  ipred_prepare.rs  iter.rs  itx.rs  itx_1d.rs  levels.rs  lf_apply.rs  lf_mask.rs  lib.rs  log.rs  loopfilter.rs  looprestoration.rs  (+22 more)
src/safe_simd/: cdef.rs  cdef_arm.rs  filmgrain.rs  filmgrain_arm.rs  ipred.rs  ipred_arm.rs  itx.rs  itx_arm.rs  loopfilter.rs  loopfilter_arm.rs  looprestoration.rs  looprestoration_arm.rs  mc.rs  mc_arm.rs  mod.rs  pal.rs  partial_simd.rs  pixel_access.rs  refmvs.rs  refmvs_arm.rs
tests/: c_ffi_api_test.rs  decode_cpu_levels.rs  decode_md5_verify.rs  decode_permutations.rs  integration_decode.rs  ivf_parser.rs  managed_api_test.rs  panic_safety_test.rs  safe_simd_crashes.rs  test_vectors.rs  thread_cleanup_test.rs
tests/crash_vectors/: alpha_noispe.obu  circle_custom_properties.obu  colors_hdr_rec2020.obu  kodim03_yuv420_8bpc.obu  picbuf_empty_vec.obu
