[workspace]
members = ["."]

[package]
name = "rav1d-safe"
authors = ["Rav1d Developers", "Prossimo", "Imazen"]
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
description = "Safe SIMD fork of rav1d - Rust AV1 decoder with archmage intrinsics"
license = "BSD-2-Clause"
repository = "https://github.com/imazen/rav1d-safe"
exclude = ["*.c", "*.h", "*.in", "meson*", "tests/", "doc/", "package/"]

[lib]
path = "lib.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
assert_matches = "1.5.0"
atomig = { version = "0.4.0", features = ["derive"] }
bitflags = "2.4.0"
cfg-if = "1.0.0"
libc = "0.2"
parking_lot = "0.12.2"
paste = "1.0.14"
raw-cpuid = "11.0.1"
strum = { version = "0.26", features = ["derive"] }
to_method = "1.1.0"
zerocopy = { version = "0.7.32", features = ["derive"] }

# Safe SIMD dependencies
archmage = { version = "0.4.0", features = ["macros"] }
safe_unaligned_simd = "0.2.4"

[build-dependencies]
cc = "1.0.79"
nasm-rs = { version = "0.3", features = ["parallel"] }

[features]
default = ["asm", "bitdepth_8", "bitdepth_16"]

# Original asm feature - uses hand-written assembly
asm = []
asm_arm64_dotprod = ["asm"]
asm_arm64_i8mm = ["asm"]
asm_arm64_sve2 = ["asm"]


bitdepth_8 = []
bitdepth_16 = []

[profile.dev]
panic = "abort"

[profile.opt-dev]
inherits = "dev"
opt-level = 1

[profile.release]
codegen-units = 1
panic = "abort"
lto = "fat"

[profile.release-with-debug]
inherits = "release"
debug = "line-tables-only"

[profile.checked-release]
inherits = "dev"
opt-level = 2
codegen-units = 16
