[workspace]
members = [".", "crates/rav1d-disjoint-mut"]

[package]
name = "rav1d-safe"
authors = ["Rav1d Developers", "Prossimo", "Imazen"]
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
description = "Safe SIMD fork of rav1d - Rust AV1 decoder with archmage intrinsics"
license = "AGPL-3.0-or-later"
repository = "https://github.com/imazen/rav1d-safe"
exclude = ["*.c", "*.h", "*.in", "meson*", "tests/", "doc/", "package/"]

[lib]
path = "lib.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
assert_matches = "1.5.0"
atomig = { version = "0.4.0", features = ["derive"] }
bitflags = "2.4.0"
cfg-if = "1.0.0"
rav1d-disjoint-mut = { path = "crates/rav1d-disjoint-mut", default-features = false, features = ["std", "aligned", "pic-buf", "zerocopy"] }
libc = "0.2"
parking_lot = "0.12.2"
paste = "1.0.14"
raw-cpuid = "11.0.1"
strum = { version = "0.26", features = ["derive"] }
to_method = "1.1.0"
zerocopy = { version = "0.7.32", features = ["derive"] }

# Safe SIMD dependencies
archmage = { version = "0.5.0", features = ["macros"] }
safe_unaligned_simd = "0.2.4"

[dev-dependencies]
divan = "0.1"
md5 = "0.8.0"

[build-dependencies]
cc = "1.0.79"
nasm-rs = { version = "0.3", features = ["parallel"] }

[features]
# Default: forbid(unsafe_code), multithreaded, bounds-checked
default = ["bitdepth_8", "bitdepth_16"]

# Unchecked slice access in hot paths (get_unchecked with debug_assert!).
# Also disables DisjointMut runtime overlap checking.
unchecked = ["rav1d-disjoint-mut/unchecked"]

# C FFI API compatibility (unsafe extern "C" functions)
# Enables: dav1d_* C API, FFISafe, c_arc, c_box
c-ffi = ["unchecked"]

# Level 4: Hand-written assembly (maximum performance)
asm = ["c-ffi"]
asm_arm64_dotprod = ["asm"]
asm_arm64_i8mm = ["asm"]
asm_arm64_sve2 = ["asm"]

# Bit depth support
bitdepth_8 = []
bitdepth_16 = []

[[bench]]
name = "decode"
harness = false

[profile.bench]
codegen-units = 1
lto = "fat"

[profile.dev]
panic = "abort"

[profile.opt-dev]
inherits = "dev"
opt-level = 1

[profile.release]
codegen-units = 1
panic = "abort"
lto = "fat"

[profile.release-with-debug]
inherits = "release"
debug = "line-tables-only"

[profile.checked-release]
inherits = "dev"
opt-level = 2
codegen-units = 16
