[package]
name = "rav1d-disjoint-mut"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "A provably safe abstraction for concurrent disjoint mutable access to contiguous storage"
license = "BSD-2-Clause"
repository = "https://github.com/imazen/rav1d-safe"
documentation = "https://docs.rs/rav1d-disjoint-mut"
keywords = ["concurrency", "mutex", "slice", "disjoint", "borrow"]
categories = ["concurrency", "no-std", "data-structures"]
exclude = ["justfile"]

[features]
default = ["std"]
std = []
# Aligned newtypes (Align4..64) and AlignedVec32/64 for SIMD-friendly layout.
aligned = ["dep:aligned", "dep:aligned-vec"]
# PicBuf: owned/borrowed byte buffer for DisjointMut (used by rav1d picture data).
pic-buf = []
# Zerocopy cast methods on guards (cast_slice, mut_slice_as, etc.).
zerocopy = ["dep:zerocopy"]

[dependencies]
aligned = { version = "0.4", default-features = false, optional = true }
aligned-vec = { version = "0.6", default-features = false, optional = true }
zerocopy = { version = "0.7.32", default-features = false, optional = true }
